--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8" />
-	<title>Sebastian Sandoval, ITMD-361 : Fundamentals of Web Development</title>
+	<title>ITMD-361 : Fundamentals of Web Development</title>
 </head>
 <body>
-	<p>&amp; Hello world. My name is Sebastian Sandoval and this is my first website!</p>
+	<h1>My name is Sebastian Sandoval</h1>
+	<p>&amp; Hello world. This is my first website!</p>
 	<p>I was born in Guatemala and moved to the United States when I was little with my grandparents. I really like to play soccer and volleyball. I am a senior in High School, and I want to be a software engineer after college.</p>
 </body>
 </html>	
