--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 <body>
 	<h1>My name is Sebastian Sandoval</h1>
 	<p>&amp; Hello world. This is my first website!</p>
-	<p>I was born in Guatemala and moved to the United States when I was little with my grandparents. I really like to play soccer and volleyball. I am a senior in High School, and I want to be a software engineer after college.</p>
+	<p>I was born in Guatemala and moved to the United States when I was little with my grandparents.</p>
+	<p>I am a senior in High School, and I want to be a software engineer after college.</p>
+	<p>I really like to play soccer and volleyball.</p>
 </body>
 </html>	
